--- a/homework1/.gitignore
+++ b/homework1/.gitignore
@@ -42,7 +42,9 @@ hs_err_pid*
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 /.idea/
+\.idea\
 .idea/*
+\.idea\*
 
 # User-specific stuff
 .idea/**/workspace.xml
