--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+*/.classpath
+*/.project
+*/.settings/org.eclipse.core.resources.prefs
+*/.settings/org.eclipse.jdt.apt.core.prefs
+*/.settings/org.eclipse.jdt.core.prefs
+*/.settings/org.eclipse.m2e.core.prefs
