Добавлены параметры необходимые для определение локали

--- a/homework2/src/main/resources/application.properties
+++ b/homework2/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-resource.Bundle=/i18n/bundle_ru_RU
-question.file=question_ru.csv
+resource.Bundle=/i18n/bundle
+app.language=en
+app.country=US
+question.file=questions_en.csv
 answer.success=4
