--- a/.gitignore
+++ b/.gitignore
@@ -37,15 +37,6 @@ buildNumber.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-### JetBrains template
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
-/.idea/
-\.idea\
-.idea/*
-\.idea\*
-
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
@@ -146,3 +137,9 @@ $RECYCLE.BIN/
 */.settings/org.eclipse.jdt.apt.core.prefs
 */.settings/org.eclipse.jdt.core.prefs
 */.settings/org.eclipse.m2e.core.prefs
+*/.idea/compiler.xml
+*/.idea/encodings.xml
+*/.idea/misc.xml
+*/.idea/modules.xml
+*/.idea/vcs.xml
+*/.idea/codeStyles/codeStyleConfig.xml
