--- a/.gitignore
+++ b/.gitignore
@@ -133,14 +133,5 @@ $RECYCLE.BIN/
 
 */.classpath
 */.project
-*/.settings/org.eclipse.core.resources.prefs
-*/.settings/org.eclipse.jdt.apt.core.prefs
-*/.settings/org.eclipse.jdt.core.prefs
-*/.settings/org.eclipse.m2e.core.prefs
-*/.idea/compiler.xml
-*/.idea/encodings.xml
-*/.idea/misc.xml
-*/.idea/modules.xml
-*/.idea/vcs.xml
-*/.idea/codeStyles/codeStyleConfig.xml
-*/.idea/workspace.xml
+*/.settings/*
+*/.idea/*
