--- a/homework6/src/main/resources/application.yml
+++ b/homework6/src/main/resources/application.yml
@@ -6,4 +6,6 @@ spring:
     generate-ddl: false
     hibernate:
       ddl-auto: none
-    show-sql: true
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    show-sql: false
