--- a/homework10/pom.xml
+++ b/homework10/pom.xml
@@ -12,13 +12,16 @@
     <artifactId>homework10</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>homework10</name>
-    <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>11</java.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
