--- a/homework8/src/main/resources/application.yaml
+++ b/homework8/src/main/resources/application.yaml
@@ -4,3 +4,7 @@ spring:
       host: localhost
       database: library
       port: 27017
+mongock:
+  change-logs-scan-package:
+    - ru.otus.ovodkov.homework8.changelogs
+  runner-type: initializingbean
