Добавлена конфигурация mongock

--- a/homework8/src/test/resources/application.yaml
+++ b/homework8/src/test/resources/application.yaml
@@ -3,3 +3,7 @@ spring:
     mongodb:
       port: 0
       database: library
+mongock:
+  change-logs-scan-package:
+    - ru.otus.ovodkov.homework8.changelogs
+  runner-type: initializingbean
